[gd_scene load_steps=13 format=2]

[ext_resource path="res://Input.gd" type="Script" id=1]
[ext_resource path="res://Instances/AutocompleteLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://console.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.0980392 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.188235, 0.188235, 0.188235, 0.392157 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.188235, 0.188235, 0.188235, 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://IBMPlexMono-SemiBold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = SubResource( 4 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.380392 )

[node name="Console" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="SectionsContainer" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0
custom_constants/separation = 20

[node name="History" type="PanelContainer" parent="Background/MarginContainer/SectionsContainer"]
margin_right = 1880.0
margin_bottom = 980.0
mouse_filter = 1
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MarginContainer/SectionsContainer/History"]
margin_right = 1880.0
margin_bottom = 980.0
mouse_filter = 1

[node name="VBoxHistory" type="VBoxContainer" parent="Background/MarginContainer/SectionsContainer/History/ScrollContainer"]
custom_constants/separation = 5

[node name="InputContainer" type="PanelContainer" parent="Background/MarginContainer/SectionsContainer"]
margin_top = 1000.0
margin_right = 1880.0
margin_bottom = 1040.0
rect_min_size = Vector2( 0, 40 )
mouse_filter = 1
custom_styles/panel = SubResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/SectionsContainer/InputContainer"]
margin_right = 1880.0
margin_bottom = 40.0

[node name="Caret" type="Label" parent="Background/MarginContainer/SectionsContainer/InputContainer/HBoxContainer"]
margin_top = 6.0
margin_right = 36.0
margin_bottom = 33.0
mouse_filter = 1
custom_fonts/font = SubResource( 5 )
text = " > "

[node name="Input" type="LineEdit" parent="Background/MarginContainer/SectionsContainer/InputContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 1880.0
margin_bottom = 40.0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
max_length = 54
placeholder_text = "input commands"
script = ExtResource( 1 )

[node name="Autocomplete" type="PanelContainer" parent="."]
margin_left = 133.85
margin_top = 450.733
margin_right = 333.85
margin_bottom = 482.733
grow_vertical = 0
rect_min_size = Vector2( 200, 32 )
size_flags_vertical = 8
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Autocomplete"]
margin_right = 200.0
margin_bottom = 32.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Autocomplete/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 195.0
margin_bottom = 27.0
grow_vertical = 0

[node name="arg_name" parent="Autocomplete/MarginContainer/VBoxContainer" instance=ExtResource( 2 )]
text = "<arg_name>"

[connection signal="text_changed" from="Background/MarginContainer/SectionsContainer/InputContainer/HBoxContainer/Input" to="." method="_on_Input_text_changed"]
[connection signal="text_entered" from="Background/MarginContainer/SectionsContainer/InputContainer/HBoxContainer/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="Background/MarginContainer/SectionsContainer/InputContainer/HBoxContainer/Input" to="Background/MarginContainer/SectionsContainer/InputContainer/HBoxContainer/Input" method="_on_Input_text_entered"]
